<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NovelReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="download">下载</string>
    <string name="detail">详情</string>
    <string name="delete">删除</string>
    
    <string name="author">作者：</string>
    
    <string name="addtobookshelft">加入书架</string>
    <string name="removebookshelft">移出书架</string>
    
    <string name="download_whole">全部缓存</string>
    <string name="download_prepare">正在缓存</string>
    <string name="download_continue">继续缓存</string>
    <string name="download_complete">缓存完成</string>
    
    <string name="search">搜索</string>
    <string name="search_hint">请输入要搜索的小说名或作者名</string>
    <string name="book_shelft">我的书架</string>
    <string name="last_update">最近更新</string>
    <string name="all">全部</string>
    
    <string name="unread_count">%d 未读</string>
    <string name="prev_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="begin_download">开始下载</string>
    
    
    <string name="xuanhuang">玄幻奇幻</string>
    <string name="wuxia">武侠仙侠</string>
    <string name="dushi">都市言情</string>
    <string name="lishi">历史军事</string>
    <string name="kehuang">科幻灵异</string>
    <string name="wangyou">网游竞技</string>
    <string name="nvsheng">女生小说</string>
    <string name="tongren">同人小说</string>
    
    <string name="chuanyue">穿越架空</string>
    <string name="kehuangxiaoshuo">科幻小说</string>
    <string name="tongrendongman">同人动漫</string>
    <string name="shehui">社会文学</string>
    <string name="zonghe">综合其他</string>
    <string name="kongbulingyi">恐怖灵异</string>
    <string name="qitaleixing">其他类型</string>
    
    <string name="online_novels">在线小说</string>
    <string name="sort_kind_novel">分类小说</string>
    
    <string name="change_source">换源</string>
    <string name="current_source">当前内容源</string>
    <string name="same_source">同章内容源</string>
    
    <string name="change_source_to">已切换源%s</string>
    <string name="setting">设置</string>
    
    <string name="bookshelft_update_num">下拉更新数目</string>
    <string name="bookshelft_update_num_des">下拉更新时更新的小说数目</string>
</resources>
