<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" >
        
        
    <TextView
        android:id="@android:id/title"
        android:text="@string/change_source"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    
    <TextView 
        style="@style/source_select__summary_style"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/current_source"/>

	<include layout="@layout/source_select_item"/>
    
    <TextView 
        style="@style/source_select__summary_style"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/same_source"/>
    
    <ListView 
        android:id="@android:id/list"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
    </ListView>
</LinearLayout>
