<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:stateListAnimator="@anim/touch_raise_scale"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        android:clickable="true"
        android:layout_margin="6dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/novel_item_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/thumb"
                    android:layout_width="@dimen/thumb_width"
                    android:layout_height="@dimen/thumb_height"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/default_cover" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp" >

                        <TextView
                            android:id="@+id/unread_chapter_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="65未读"
                            android:textColor="@color/unread_color"
                            android:textSize="@dimen/unread_text_size" />

                        <TextView
                            android:id="@+id/novel_name"
                            style="@style/novelNameStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_toLeftOf="@id/unread_chapter_count"
                            android:text="无限恐怖" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp" >

                        <TextView
                            android:id="@+id/last_chapter"
                            style="@style/novelItemTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="第一张 黑河" />

                        <TextView
                            android:id="@+id/last_update_time"
                            style="@style/novelItemTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/last_chapter"
                            android:layout_marginTop="5dp"
                            android:drawableLeft="@drawable/last_update_time_icon"
                            android:text="2天前" />

                        <TextView
                            android:id="@+id/chapter_count"
                            style="@style/novelItemTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/last_update_time"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@id/last_update_time"
                            android:drawableLeft="@drawable/read_page_icon"
                            android:text="120/340" />

                        <FrameLayout
                            android:id="@+id/toggleView"
                            android:layout_width="40.0dip"
                            android:layout_height="40.0dip"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="-20dp"
                            android:clickable="true"
                            android:orientation="vertical" >

                            <ToggleButton
                                android:id="@+id/toggle_more"
                                style="@style/toggleButtonStyle"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:clickable="false"
                                android:focusable="false" />
                        </FrameLayout>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hideMenuLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/buttonBackgrundadd"
                    android:layout_width="28.0px"
                    android:layout_height="23.0px"
                    android:layout_gravity="right"
                    android:layout_marginRight="35.0px"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48.0dip"
                    android:orientation="horizontal"
                    android:paddingLeft="18.0dip"
                    android:paddingRight="18.0dip"
                    android:paddingTop="@dimen/length_2" >

                    <com.lw.widget.DownloadText
                        android:id="@+id/download"
                        android:layout_width="0.0dip"
                        android:layout_height="30.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/bookinfo_button_selector"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/download"
                        android:textColor="#ff666666"
                        android:textSize="12.0dip" />

                    <TextView
                        android:id="@+id/detail"
                        android:layout_width="0.0dip"
                        android:layout_height="30.0dip"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="20.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/bookinfo_button_selector"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/detail"
                        android:textColor="#ff666666"
                        android:textSize="12.0dip" />

                    <TextView
                        android:id="@+id/delete"
                        android:layout_width="0.0dip"
                        android:layout_height="30.0dip"
                        android:layout_weight="1.0"
                        android:background="@drawable/bookinfo_button_selector"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/delete"
                        android:textColor="#ff666666"
                        android:textSize="12.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>